# ubl

./: .gitignore  CMakeLists.txt  build-vs2017.sh  ubl_main.sln
ThreadPoolExe/: CMakeLists.txt  ThreadPoolExe.vcxproj  main.cpp
ubl/: BitonicSort.h  CMakeLists.txt  ParallelSearch.h  SuffixTree.cpp  SuffixTree.h  ThreadPool.cpp  ThreadPool.h  ThreadsafeQueue.h  Variant.h  main.cpp  ubl.h  ubl.vcxproj  ubl.vcxproj.filters
ubl/detail/: BitonicSortImpl.h  IRamMonitor.cpp  IRamMonitor.h  ParallelSearchAsync.h  ParallelSearchOpenMP.h  VariadicHelpersImpl.h  VariantImpl.h  WindowsRamMonitor.cpp
ubl/detail/os/macos/: MacosRamMonitor.cpp  MacosRamMonitor.h
ubl/detail/os/windows/: WindowsRamMonitor.h
ubl/detail/patterns/: MasterSlavePattern.h
ubl/utils/: ElapsedTimer.cpp  ElapsedTimer.h  VariadicHelpers.h  tests_helper.cpp  tests_helper.h
ubl_tests/: BitonicSortTests.cpp  CMakeLists.txt  CMakeLists.txt.in  MatrixSolution.h  ParallelSearchTests.cpp  SuffixTreeTests.cpp  VariadicHelpersTests.cpp  VariantTests.cpp  main.cpp  ubl_tests.vcxproj  ubl_tests.vcxproj.filters
